--- a/index.html
+++ b/index.html
@@ -103,32 +103,32 @@
           <p>Qualidade do ar</p>
         </div>
         <div class="air-status">
-          <span>Boa</span>
-          <h1>21</h1>
+          <span id="air-quality">Boa</span>
+          <h1 id="air-quality-metric">21</h1>
         </div>
         <div class="air-statistics">
           <div class="air-statistics-text">
-            <span>12.9</span>
+            <span id="pm25-value">12.9</span>
             <span>PM2.5</span>
           </div>
           <div class="air-statistics-text">
-            <span>12.9</span>
+            <span id="pm10-value">12.9</span>
             <span>PM10</span>
           </div>
           <div class="air-statistics-text">
-            <span>2.1</span>
+            <span id="so-value">2.1</span>
             <span>SO²</span>
           </div>
           <div class="air-statistics-text">
-            <span>1.4</span>
+            <span id="no-value">1.4</span>
             <span>NO²</span>
           </div>
           <div class="air-statistics-text">
-            <span>21.2</span>
+            <span id="o2-value">21.2</span>
             <span>0²</span>
           </div>
           <div class="air-statistics-text">
-            <span>0.7</span>
+            <span id="co-value">0.7</span>
             <span>CO</span>
           </div>
         </div>
