--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
   </section>
 
-  <script type="module"  src="./app/getWeather.js"></script>
+  <script type="module"  src="./main.js"></script>
 </body>
 
 </html>
