--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <section class="container-main">
       <div class="block weather-block">
         <div class="temp-area">
-           <img id="svg-container" src="" alt="">
+          <img id="svg-container" src="" alt="">
           <div id="cityName" class="locale">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M9.83337 7.16683C8.91671 7.16683 8.16671 7.91683 8.16671 8.8335C8.16671 9.75017 8.91671 10.5002 9.83337 10.5002C10.75 10.5002 11.5 9.75017 11.5 8.8335C11.5 7.91683 10.75 7.16683 9.83337 7.16683ZM9.83337 3.00017C12.5584 3.00017 15.6667 5.05017 15.6667 8.9585C15.6667 11.4418 13.8917 14.0585 10.3417 16.7835C10.0417 17.0168 9.62504 17.0168 9.32504 16.7835C5.77504 14.0502 4.00004 11.4418 4.00004 8.9585C4.00004 5.05017 7.10837 3.00017 9.83337 3.00017Z"
                 fill="#9D99E4" />
             </svg>
-            <input autocomplete="none" maxlength="23" class="city-input" placeholder="Informe a Cidade"/>
+            <input autocomplete="none" maxlength="23" class="city-input" placeholder="Informe a Cidade" />
           </div>
           <div class="temperature">
             <div class="temp-text" id="cityTemperature">18</div>
@@ -84,7 +84,11 @@
             </div>
           </div>
           <div class="statistics-block visibility-block">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="white" opacity="0.4" width="800px" height="800px" viewBox="0 0 24 24"><path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="white" opacity="0.4" width="800px" height="800px"
+              viewBox="0 0 24 24">
+              <path
+                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z" />
+            </svg>
             <div class="block-data">
               <span>Visibilidade</span><br>
               <p id="visibility-tax">10<span>km</span></p>
@@ -316,10 +320,7 @@
         </div>
       </div>
     </section>
-
   </section>
-
-  <script type="module"  src="./main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
-
 </html>
