Responsive implemented and background change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="./assets/styles/airBlock.css">
   <link rel="stylesheet" href="./assets/styles/sunBlock.css">
   <link rel="stylesheet" href="./assets/styles/weekBlock.css">
-  <title>weather App</title>
+
+  <link rel="shortcut icon" href="/images/weatherImages/SolEntreNuvens.png" type="image/x-icon">
+  <title>Olha a Chuva - Previsão do Tempo</title>
 </head>
 
 <body>
@@ -113,23 +115,23 @@
         <div class="air-statistics">
           <div class="air-statistics-text">
             <span id="pm25-value">12.9</span>
-            <span>PM2.5</span>
+            <span>PM<sub>2.5</sub></span>
           </div>
           <div class="air-statistics-text">
             <span id="pm10-value">12.9</span>
-            <span>PM10</span>
+            <span>PM<sub>10</sub></span>
           </div>
           <div class="air-statistics-text">
             <span id="so-value">2.1</span>
-            <span>SO²</span>
+            <span>SO<sub>2</sub></span>
           </div>
           <div class="air-statistics-text">
             <span id="no-value">1.4</span>
-            <span>NO²</span>
+            <span>NO<sub>2</sub></span>
           </div>
           <div class="air-statistics-text">
             <span id="o2-value">21.2</span>
-            <span>0²</span>
+            <span>0<sub>3</sub></span>
           </div>
           <div class="air-statistics-text">
             <span id="co-value">0.7</span>
