--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="./assets/styles/airBlock.css">
   <link rel="stylesheet" href="./assets/styles/sunBlock.css">
   <link rel="stylesheet" href="./assets/styles/weekBlock.css">
-
+  <script src="https://kit.fontawesome.com/5b242c111d.js" crossorigin="anonymous"></script>
+  
   <link rel="shortcut icon" href="/images/weatherImages/SolEntreNuvens.png" type="image/x-icon">
   <title>Olha a Chuva - Previsão do Tempo</title>
 </head>
@@ -161,8 +162,20 @@
       </div>
       <div class="block week-block">
       </div>
-    </section>
+    </section>  
+    <footer>
+      <div class="footer-top">
+          <div class="footer-content">
+              Made with pure <i class="fab fa-js"> </i> by <a target="_blank"
+                  href="https://github.com/HigorTuretta/vanillaJS-calculator">Higor
+                  Turetta</a>
+          </div>
+      </div>
+  </footer>  
   </section>
+  
+
+
   <script type="module" src="./main.js"></script>
 </body>
 </html>
